TEST_PROGRAMS/INVALID/brendan_gordon/wrongStrings.min
print "There aren't any % signs in this thing";

